EB-2002-01-29-0: Enhancem.: Improved logging
                            - product mode string will be printed during
                              startup and shutdown

CR-2002-01-29-0: Testsuite: - new settings file version "6" (new parameter
                              product_feature)
                 Enhancem.: - added support for secure SGE/EE system
                            - removed command line parameter test_perm
                            - added command line parameter reset_conf
                            - updated changes from install script
                            - testing product feature file on startup

AH-2002-01-29-0: Bugfix:    - scheduler had problems with iterating over PE slots range
                              from max to min in case of $pe_slots alloc rule

AA-2002-01-28-2: Feature:   - sge_ca -usercert <file> added to generate keys/certs for
                              users in file

EB-2002-01-28-0: Bugfix:    - "qselect -l h=<host with no queues>" prints
                              error message.

AA-2002-01-28-1: Bugfix:    - qmon unable to contact master message fix
                            - func proto show_info_job,..

AA-2002-01-28-0: Bugfix:    - GCC_NO_STRICT_PROT broke build on alinux
                              GCC_NO_STRICT_PROT -> GCC_NOSP in aimk and security/sec/Makefile
                            - memleak fixes in security/sec/sec_lib.c  

AS-2002-01-28-0: Change:    removed SECURE defined from CULL headers"

SD-2002-01-25-2: Bugfix:    Changed aimk variable name GCC_NO_STRICT_PROTO to
                             GCC_NO_STRICT_PROT variable because /bin/csh on the SX-6
                             only allows 18 character variable names.

AH-2002-01-25-1: Bugfix:    Removed last reference of no longer existing QSI from man pages.
                            The QSI functionality is replaced by {starter,terminate,suspend,
                            resume}_method functionality