@@ -1,3 +1,8 @@
+JG-2002-01-29-0: Testsuite: Enhanced "large_cluster" test:
+                            - check product type (sge/sgeee)
+                            - create HTML report with charts generated by 
+                              gnuplot
+
 EB-2002-01-29-0: Enhancem.: Improved logging
                             - product mode string will be printed during
                               startup and shutdown
